# API-para-la-gesti-n-de-contactos-y-usuarios

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTAS.md  README.md  alembic.ini  create_admin.py  docker-compose.yml  docker_create_admin.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
app/: __init__.py  main.py
app/auth/: __init__.py  api.py  dependencies.py  errors.py  handlers.py  jwt.py  schemas.py  service.py
app/auth/tests/: test_service.py
app/common/: __init__.py  config.py  database.py  errors.py  hashing.py  logging.py  result.py  schemas.py  security.py
app/contacts/: __init__.py  api.py  errors.py  handlers.py  models.py  repository.py  schemas.py  service.py
app/contacts/tests/: __init__.py  conftest.py  test_group_repository.py  test_group_service.py  test_repository.py  test_service.py
app/roles/: __init__.py  api.py  errors.py  handlers.py  models.py  repository.py  schemas.py  service.py
app/users/: __init__.py  api.py  errors.py  handlers.py  models.py  repository.py  schemas.py  service.py
docs/: arquitectura.md  flujo_desarrollo.md  mejores_practicas.md
migrations/: env.py  script.py.mako
